pre last commit

--- a/Maib.API/Dockerfile
+++ b/Maib.API/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
@@ -7,6 +5,7 @@ EXPOSE 8080
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
+ENV ASPNETCORE_ENVIRONMENT=Development
 WORKDIR /src
 COPY ["Maib.API.csproj", "."]
 RUN dotnet restore "./Maib.API.csproj"
@@ -16,7 +15,8 @@ RUN dotnet build "./Maib.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Maib.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+ENV ASPNETCORE_ENVIRONMENT=Development
+RUN dotnet publish "./Maib.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
 FROM base AS final
 WORKDIR /app
